[project]
name = "versionone"
version = "0.1.1"
description = "VersionOne SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/versionone"]